# background-eraser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  run.sh  start.sh
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: api_definition.rs  mod.rs
backend/src/detect/: mod.rs  segdetect.rs
backend/src/image_proc/: image_proc.rs  mod.rs
frontend/: ambient.d.ts  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: DragImage.svelte  NotificationHandler.svelte  PreviewImage.svelte  TextSlider.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/api/erase/: +server.ts
